--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Most of the libraries are not written by me, but they are not maintained any more and I find them very useful. In some cases I have made some customisations of my own. 
+Only han-mode.el is written by me, the others are not maintained any
+more and I find them very useful. In some cases I have made some
+customisations of my own. Hence this repository. :)
