Minor changes to the README.

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Only han-mode.el is written by me, the others are not maintained any
 more and I find them very useful. In some cases I have made some
-customisations of my own. Hence this repository. :)
+customisations of my own. And I have customised org-mode and emacs
+quite a bit, hence this repository. :)
